adding ikmb docker

--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,7 @@ dag {
         file = "${params.outdir}/pipeline_info/pipeline_dag.svg"
 }
 
-process.container = 'docker://eikematthias/easi-pipe:latest'
+process.container = 'docker://ikmb/easi-pipe:latest'
 
 profiles {
 	standard {
