--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ params {
 }
 
 manifest {
-	version = "1.0"
+	version = "1.0.0"
 	description = "EASI Pipeline"
 	author = "Malte Rühlemann & Eike Matthias Wacker"
 	homePage = "https://github.com/ikmb/EASI_FullLength16S_pipeline"
@@ -56,7 +56,7 @@ dag {
         file = "${params.outdir}/pipeline_info/pipeline_dag.svg"
 }
 
-process.container = 'docker://ikmb/easi-pipe:devel'
+process.container = 'docker://ikmb/easi-pipe:1.0.0'
 
 profiles {
 	standard {
