fixed results output when working with scratch true

--- a/conf/local.config
+++ b/conf/local.config
@@ -1,9 +1,10 @@
+// This file is currently configured to run on a reserved single node on medcluster Kiel, use "srun --pty --nodes=1 --cpus-per-task=16 --mem=80G --time=48:00:00 /bin/bash", then start nextflow with parameter "-profile local"
 
 // Job paramaters to set for this environment
 
 params {
-	max_cpus = 4
-	max_ram = 15
+	max_cpus = 16
+	max_ram = 64
 }
 
 // Resource manager settings
@@ -22,7 +23,8 @@ process {
 
 singularity {
   enabled = true
-  //runOptions = "-B /work_ifs -B /scratch"
-  cacheDir = "${baseDir}/../singularity-cache"
+  runOptions = "-B /work_ifs -B /scratch"
+  //cacheDir = "${baseDir}/../singularity-cache"
+  cacheDir = "/work_ifs/ikmb_repository/singularity_cache"
 }
 
