--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,8 @@ dag {
         file = "${params.outdir}/pipeline_info/pipeline_dag.svg"
 }
 
-process.container = 'docker://ikmb/easi-pipe:1.0.0'
+//process.container = 'docker://eikematthias/easi-pipe:latest'
+process.container = 'docker://ikmb/easi-pipe:devel'
 
 profiles {
 	standard {
