--- a/conf/medcluster.config
+++ b/conf/medcluster.config
@@ -2,7 +2,7 @@
 // Job paramaters to set for this environment
 
 params {
-	max_cpus = 30
+	max_cpus = 20
 	max_ram = 200
 }
 
@@ -18,9 +18,13 @@ process {
   
   executor = 'slurm'
   queue = 'all'
-  clusterOptions = '-C fast'
 
 }
+
+/*
+
+  //clusterOptions = '-C fast'
+*/
 
 singularity {
   enabled = true
