--- a/nextflow.config
+++ b/nextflow.config
@@ -57,7 +57,8 @@ dag {
 }
 
 //process.container = 'docker://eikematthias/easi-pipe:latest'
-process.container = 'docker://ikmb/easi-pipe:devel'
+//process.container = 'docker://ikmb/easi-pipe:devel'
+process.container = 'docker://ikmb/easi-pipe:1.0.0'
 
 profiles {
 	standard {
